src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INSTANCE_NAME
    LPAREN
    RPAREN
    SPECIAL_SYMBOL

Grammar

Rule 0     S' -> program
Rule 1     program -> imports_opt package_decl elementos
Rule 2     imports_opt -> imports_opt import_decl
Rule 3     imports_opt -> import_decl
Rule 4     imports_opt -> empty
Rule 5     package_decl -> KW_PACKAGE identifier_any
Rule 6     package_decl -> empty
Rule 7     elementos -> elementos elemento
Rule 8     elementos -> elemento
Rule 9     elemento -> class_decl
Rule 10    elemento -> datatype_decl
Rule 11    elemento -> enum_decl
Rule 12    elemento -> genset_decl
Rule 13    elemento -> relation_decl_external
Rule 14    elemento -> import_decl
Rule 15    import_decl -> KW_IMPORT identifier_any
Rule 16    class_decl -> CLASS_STEREOTYPE CLASS_NAME nature_opt inheritance_opt body_opt
Rule 17    nature_opt -> KW_OF RELATION_NAME
Rule 18    nature_opt -> empty
Rule 19    inheritance_opt -> KW_SPECIALIZES class_list
Rule 20    inheritance_opt -> empty
Rule 21    body_opt -> LBRACE class_body RBRACE
Rule 22    body_opt -> empty
Rule 23    class_body -> class_body member
Rule 24    class_body -> member
Rule 25    member -> atributo
Rule 26    member -> internal_relation
Rule 27    cardinality_opt -> cardinality
Rule 28    cardinality_opt -> empty
Rule 29    atributo -> RELATION_NAME COLON tipo cardinality_opt meta_attribs_opt
Rule 30    meta_attribs_opt -> LBRACE RELATION_NAME RBRACE
Rule 31    meta_attribs_opt -> LBRACE RBRACE
Rule 32    meta_attribs_opt -> empty
Rule 33    tipo -> DATA_TYPE
Rule 34    tipo -> NEW_TYPE
Rule 35    tipo -> CLASS_NAME
Rule 36    internal_relation -> opt_at cardinality REL_SYM cardinality CLASS_NAME
Rule 37    internal_relation -> opt_at cardinality REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME
Rule 38    internal_relation -> opt_at REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME
Rule 39    internal_relation -> REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME
Rule 40    internal_relation -> opt_at REL_SYM CLASS_NAME
Rule 41    datatype_identifier -> NEW_TYPE
Rule 42    datatype_identifier -> CLASS_NAME
Rule 43    datatype_target_for_spec -> DATA_TYPE
Rule 44    datatype_target_for_spec -> NEW_TYPE
Rule 45    datatype_target_for_spec -> CLASS_NAME
Rule 46    datatype_decl -> KW_DATATYPE datatype_identifier LBRACE atributos_dt RBRACE
Rule 47    datatype_decl -> KW_DATATYPE datatype_identifier KW_SPECIALIZES datatype_target_for_spec
Rule 48    atributos_dt -> atributos_dt atributo
Rule 49    atributos_dt -> atributo
Rule 50    enum_decl -> KW_ENUM CLASS_NAME LBRACE lista_enum RBRACE
Rule 51    lista_enum -> lista_enum COMMA CLASS_NAME
Rule 52    lista_enum -> CLASS_NAME
Rule 53    genset_decl -> genset_inline
Rule 54    genset_decl -> genset_block
Rule 55    genset_modifiers -> KW_DISJOINT KW_COMPLETE
Rule 56    genset_modifiers -> KW_DISJOINT
Rule 57    genset_modifiers -> KW_COMPLETE
Rule 58    genset_modifiers -> empty
Rule 59    genset_inline -> genset_modifiers KW_GENSET identifier_any KW_WHERE class_list KW_SPECIALIZES CLASS_NAME
Rule 60    genset_block -> genset_modifiers KW_GENSET identifier_any LBRACE general_decl specifics_decl RBRACE
Rule 61    general_decl -> KW_GENERAL CLASS_NAME
Rule 62    specifics_decl -> KW_SPECIFICS class_list
Rule 63    class_list -> class_list COMMA CLASS_NAME
Rule 64    class_list -> CLASS_NAME
Rule 65    relation_decl_external -> opt_at KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
Rule 66    relation_decl_external -> opt_at KW_RELATION CLASS_NAME cardinality REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME
Rule 67    relation_decl_external -> RELATION_STEREOTYPE KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
Rule 68    opt_at -> AT RELATION_STEREOTYPE
Rule 69    opt_at -> RELATION_STEREOTYPE
Rule 70    opt_at -> empty
Rule 71    cardinality -> LBRACKET NUMBER RBRACKET
Rule 72    cardinality -> LBRACKET NUMBER RANGE_DOTS STAR RBRACKET
Rule 73    cardinality -> LBRACKET NUMBER RANGE_DOTS NUMBER RBRACKET
Rule 74    cardinality -> LBRACKET STAR RBRACKET
Rule 75    identifier_any -> CLASS_NAME
Rule 76    identifier_any -> RELATION_NAME
Rule 77    empty -> <empty>

Terminals, with rules where they appear

AT                   : 68
CLASS_NAME           : 16 35 36 37 38 39 40 42 45 50 51 52 59 61 63 64 65 65 66 66 67 67 75
CLASS_STEREOTYPE     : 16
COLON                : 29
COMMA                : 51 63
DATA_TYPE            : 33 43
INSTANCE_NAME        : 
KW_COMPLETE          : 55 57
KW_DATATYPE          : 46 47
KW_DISJOINT          : 55 56
KW_ENUM              : 50
KW_GENERAL           : 61
KW_GENSET            : 59 60
KW_IMPORT            : 15
KW_OF                : 17
KW_PACKAGE           : 5
KW_RELATION          : 65 66 67
KW_SPECIALIZES       : 19 47 59
KW_SPECIFICS         : 62
KW_WHERE             : 59
LBRACE               : 21 30 31 46 50 60
LBRACKET             : 71 72 73 74
LPAREN               : 
NEW_TYPE             : 34 41 44
NUMBER               : 71 72 73 73
RANGE_DOTS           : 72 73
RBRACE               : 21 30 31 46 50 60
RBRACKET             : 71 72 73 74
RELATION_NAME        : 17 29 30 37 38 39 66 76
RELATION_STEREOTYPE  : 67 68 69
REL_SYM              : 36 37 37 38 38 39 39 40 65 66 66 67
RPAREN               : 
SPECIAL_SYMBOL       : 
STAR                 : 72 74
error                : 

Nonterminals, with rules where they appear

atributo             : 25 48 49
atributos_dt         : 46 48
body_opt             : 16
cardinality          : 27 36 36 37 37 38 39 65 65 66 66 67 67
cardinality_opt      : 29
class_body           : 21 23
class_decl           : 9
class_list           : 19 59 62 63
datatype_decl        : 10
datatype_identifier  : 46 47
datatype_target_for_spec : 47
elemento             : 7 8
elementos            : 1 7
empty                : 4 6 18 20 22 28 32 58 70
enum_decl            : 11
general_decl         : 60
genset_block         : 54
genset_decl          : 12
genset_inline        : 53
genset_modifiers     : 59 60
identifier_any       : 5 15 59 60
import_decl          : 2 3 14
imports_opt          : 1 2
inheritance_opt      : 16
internal_relation    : 26
lista_enum           : 50 51
member               : 23 24
meta_attribs_opt     : 29
nature_opt           : 16
opt_at               : 36 37 38 40 65 66
package_decl         : 1
program              : 0
relation_decl_external : 13
specifics_decl       : 60
tipo                 : 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . imports_opt package_decl elementos
    (2) imports_opt -> . imports_opt import_decl
    (3) imports_opt -> . import_decl
    (4) imports_opt -> . empty
    (15) import_decl -> . KW_IMPORT identifier_any
    (77) empty -> .

  ! shift/reduce conflict for KW_IMPORT resolved as shift
    KW_IMPORT       shift and go to state 5
    KW_PACKAGE      reduce using rule 77 (empty -> .)
    CLASS_STEREOTYPE reduce using rule 77 (empty -> .)
    KW_DATATYPE     reduce using rule 77 (empty -> .)
    KW_ENUM         reduce using rule 77 (empty -> .)
    RELATION_STEREOTYPE reduce using rule 77 (empty -> .)
    AT              reduce using rule 77 (empty -> .)
    KW_DISJOINT     reduce using rule 77 (empty -> .)
    KW_COMPLETE     reduce using rule 77 (empty -> .)
    KW_RELATION     reduce using rule 77 (empty -> .)
    KW_GENSET       reduce using rule 77 (empty -> .)

  ! KW_IMPORT       [ reduce using rule 77 (empty -> .) ]

    program                        shift and go to state 1
    imports_opt                    shift and go to state 2
    import_decl                    shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> imports_opt . package_decl elementos
    (2) imports_opt -> imports_opt . import_decl
    (5) package_decl -> . KW_PACKAGE identifier_any
    (6) package_decl -> . empty
    (15) import_decl -> . KW_IMPORT identifier_any
    (77) empty -> .

  ! shift/reduce conflict for KW_IMPORT resolved as shift
    KW_PACKAGE      shift and go to state 8
    KW_IMPORT       shift and go to state 5
    CLASS_STEREOTYPE reduce using rule 77 (empty -> .)
    KW_DATATYPE     reduce using rule 77 (empty -> .)
    KW_ENUM         reduce using rule 77 (empty -> .)
    RELATION_STEREOTYPE reduce using rule 77 (empty -> .)
    AT              reduce using rule 77 (empty -> .)
    KW_DISJOINT     reduce using rule 77 (empty -> .)
    KW_COMPLETE     reduce using rule 77 (empty -> .)
    KW_RELATION     reduce using rule 77 (empty -> .)
    KW_GENSET       reduce using rule 77 (empty -> .)

  ! KW_IMPORT       [ reduce using rule 77 (empty -> .) ]

    package_decl                   shift and go to state 6
    import_decl                    shift and go to state 7
    empty                          shift and go to state 9

state 3

    (3) imports_opt -> import_decl .

    KW_PACKAGE      reduce using rule 3 (imports_opt -> import_decl .)
    KW_IMPORT       reduce using rule 3 (imports_opt -> import_decl .)
    CLASS_STEREOTYPE reduce using rule 3 (imports_opt -> import_decl .)
    KW_DATATYPE     reduce using rule 3 (imports_opt -> import_decl .)
    KW_ENUM         reduce using rule 3 (imports_opt -> import_decl .)
    RELATION_STEREOTYPE reduce using rule 3 (imports_opt -> import_decl .)
    AT              reduce using rule 3 (imports_opt -> import_decl .)
    KW_DISJOINT     reduce using rule 3 (imports_opt -> import_decl .)
    KW_COMPLETE     reduce using rule 3 (imports_opt -> import_decl .)
    KW_RELATION     reduce using rule 3 (imports_opt -> import_decl .)
    KW_GENSET       reduce using rule 3 (imports_opt -> import_decl .)


state 4

    (4) imports_opt -> empty .

    KW_PACKAGE      reduce using rule 4 (imports_opt -> empty .)
    KW_IMPORT       reduce using rule 4 (imports_opt -> empty .)
    CLASS_STEREOTYPE reduce using rule 4 (imports_opt -> empty .)
    KW_DATATYPE     reduce using rule 4 (imports_opt -> empty .)
    KW_ENUM         reduce using rule 4 (imports_opt -> empty .)
    RELATION_STEREOTYPE reduce using rule 4 (imports_opt -> empty .)
    AT              reduce using rule 4 (imports_opt -> empty .)
    KW_DISJOINT     reduce using rule 4 (imports_opt -> empty .)
    KW_COMPLETE     reduce using rule 4 (imports_opt -> empty .)
    KW_RELATION     reduce using rule 4 (imports_opt -> empty .)
    KW_GENSET       reduce using rule 4 (imports_opt -> empty .)


state 5

    (15) import_decl -> KW_IMPORT . identifier_any
    (75) identifier_any -> . CLASS_NAME
    (76) identifier_any -> . RELATION_NAME

    CLASS_NAME      shift and go to state 11
    RELATION_NAME   shift and go to state 12

    identifier_any                 shift and go to state 10

state 6

    (1) program -> imports_opt package_decl . elementos
    (7) elementos -> . elementos elemento
    (8) elementos -> . elemento
    (9) elemento -> . class_decl
    (10) elemento -> . datatype_decl
    (11) elemento -> . enum_decl
    (12) elemento -> . genset_decl
    (13) elemento -> . relation_decl_external
    (14) elemento -> . import_decl
    (16) class_decl -> . CLASS_STEREOTYPE CLASS_NAME nature_opt inheritance_opt body_opt
    (46) datatype_decl -> . KW_DATATYPE datatype_identifier LBRACE atributos_dt RBRACE
    (47) datatype_decl -> . KW_DATATYPE datatype_identifier KW_SPECIALIZES datatype_target_for_spec
    (50) enum_decl -> . KW_ENUM CLASS_NAME LBRACE lista_enum RBRACE
    (53) genset_decl -> . genset_inline
    (54) genset_decl -> . genset_block
    (65) relation_decl_external -> . opt_at KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
    (66) relation_decl_external -> . opt_at KW_RELATION CLASS_NAME cardinality REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME
    (67) relation_decl_external -> . RELATION_STEREOTYPE KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
    (15) import_decl -> . KW_IMPORT identifier_any
    (59) genset_inline -> . genset_modifiers KW_GENSET identifier_any KW_WHERE class_list KW_SPECIALIZES CLASS_NAME
    (60) genset_block -> . genset_modifiers KW_GENSET identifier_any LBRACE general_decl specifics_decl RBRACE
    (68) opt_at -> . AT RELATION_STEREOTYPE
    (69) opt_at -> . RELATION_STEREOTYPE
    (70) opt_at -> . empty
    (55) genset_modifiers -> . KW_DISJOINT KW_COMPLETE
    (56) genset_modifiers -> . KW_DISJOINT
    (57) genset_modifiers -> . KW_COMPLETE
    (58) genset_modifiers -> . empty
    (77) empty -> .

    CLASS_STEREOTYPE shift and go to state 21
    KW_DATATYPE     shift and go to state 22
    KW_ENUM         shift and go to state 23
    RELATION_STEREOTYPE shift and go to state 27
    KW_IMPORT       shift and go to state 5
    AT              shift and go to state 29
    KW_DISJOINT     shift and go to state 31
    KW_COMPLETE     shift and go to state 32
    KW_RELATION     reduce using rule 77 (empty -> .)
    KW_GENSET       reduce using rule 77 (empty -> .)

    elementos                      shift and go to state 13
    elemento                       shift and go to state 14
    class_decl                     shift and go to state 15
    datatype_decl                  shift and go to state 16
    enum_decl                      shift and go to state 17
    genset_decl                    shift and go to state 18
    relation_decl_external         shift and go to state 19
    import_decl                    shift and go to state 20
    genset_inline                  shift and go to state 24
    genset_block                   shift and go to state 25
    opt_at                         shift and go to state 26
    genset_modifiers               shift and go to state 28
    empty                          shift and go to state 30

state 7

    (2) imports_opt -> imports_opt import_decl .

    KW_PACKAGE      reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_IMPORT       reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    CLASS_STEREOTYPE reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_DATATYPE     reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_ENUM         reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    RELATION_STEREOTYPE reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    AT              reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_DISJOINT     reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_COMPLETE     reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_RELATION     reduce using rule 2 (imports_opt -> imports_opt import_decl .)
    KW_GENSET       reduce using rule 2 (imports_opt -> imports_opt import_decl .)


state 8

    (5) package_decl -> KW_PACKAGE . identifier_any
    (75) identifier_any -> . CLASS_NAME
    (76) identifier_any -> . RELATION_NAME

    CLASS_NAME      shift and go to state 11
    RELATION_NAME   shift and go to state 12

    identifier_any                 shift and go to state 33

state 9

    (6) package_decl -> empty .

    CLASS_STEREOTYPE reduce using rule 6 (package_decl -> empty .)
    KW_DATATYPE     reduce using rule 6 (package_decl -> empty .)
    KW_ENUM         reduce using rule 6 (package_decl -> empty .)
    RELATION_STEREOTYPE reduce using rule 6 (package_decl -> empty .)
    KW_IMPORT       reduce using rule 6 (package_decl -> empty .)
    AT              reduce using rule 6 (package_decl -> empty .)
    KW_DISJOINT     reduce using rule 6 (package_decl -> empty .)
    KW_COMPLETE     reduce using rule 6 (package_decl -> empty .)
    KW_RELATION     reduce using rule 6 (package_decl -> empty .)
    KW_GENSET       reduce using rule 6 (package_decl -> empty .)


state 10

    (15) import_decl -> KW_IMPORT identifier_any .

    KW_PACKAGE      reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_IMPORT       reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    CLASS_STEREOTYPE reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_DATATYPE     reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_ENUM         reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    RELATION_STEREOTYPE reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    AT              reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_DISJOINT     reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_COMPLETE     reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_RELATION     reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    KW_GENSET       reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)
    $end            reduce using rule 15 (import_decl -> KW_IMPORT identifier_any .)


state 11

    (75) identifier_any -> CLASS_NAME .

    KW_PACKAGE      reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_IMPORT       reduce using rule 75 (identifier_any -> CLASS_NAME .)
    CLASS_STEREOTYPE reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_DATATYPE     reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_ENUM         reduce using rule 75 (identifier_any -> CLASS_NAME .)
    RELATION_STEREOTYPE reduce using rule 75 (identifier_any -> CLASS_NAME .)
    AT              reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_DISJOINT     reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_COMPLETE     reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_RELATION     reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_GENSET       reduce using rule 75 (identifier_any -> CLASS_NAME .)
    $end            reduce using rule 75 (identifier_any -> CLASS_NAME .)
    KW_WHERE        reduce using rule 75 (identifier_any -> CLASS_NAME .)
    LBRACE          reduce using rule 75 (identifier_any -> CLASS_NAME .)


state 12

    (76) identifier_any -> RELATION_NAME .

    KW_PACKAGE      reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_IMPORT       reduce using rule 76 (identifier_any -> RELATION_NAME .)
    CLASS_STEREOTYPE reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_DATATYPE     reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_ENUM         reduce using rule 76 (identifier_any -> RELATION_NAME .)
    RELATION_STEREOTYPE reduce using rule 76 (identifier_any -> RELATION_NAME .)
    AT              reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_DISJOINT     reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_COMPLETE     reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_RELATION     reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_GENSET       reduce using rule 76 (identifier_any -> RELATION_NAME .)
    $end            reduce using rule 76 (identifier_any -> RELATION_NAME .)
    KW_WHERE        reduce using rule 76 (identifier_any -> RELATION_NAME .)
    LBRACE          reduce using rule 76 (identifier_any -> RELATION_NAME .)


state 13

    (1) program -> imports_opt package_decl elementos .
    (7) elementos -> elementos . elemento
    (9) elemento -> . class_decl
    (10) elemento -> . datatype_decl
    (11) elemento -> . enum_decl
    (12) elemento -> . genset_decl
    (13) elemento -> . relation_decl_external
    (14) elemento -> . import_decl
    (16) class_decl -> . CLASS_STEREOTYPE CLASS_NAME nature_opt inheritance_opt body_opt
    (46) datatype_decl -> . KW_DATATYPE datatype_identifier LBRACE atributos_dt RBRACE
    (47) datatype_decl -> . KW_DATATYPE datatype_identifier KW_SPECIALIZES datatype_target_for_spec
    (50) enum_decl -> . KW_ENUM CLASS_NAME LBRACE lista_enum RBRACE
    (53) genset_decl -> . genset_inline
    (54) genset_decl -> . genset_block
    (65) relation_decl_external -> . opt_at KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
    (66) relation_decl_external -> . opt_at KW_RELATION CLASS_NAME cardinality REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME
    (67) relation_decl_external -> . RELATION_STEREOTYPE KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
    (15) import_decl -> . KW_IMPORT identifier_any
    (59) genset_inline -> . genset_modifiers KW_GENSET identifier_any KW_WHERE class_list KW_SPECIALIZES CLASS_NAME
    (60) genset_block -> . genset_modifiers KW_GENSET identifier_any LBRACE general_decl specifics_decl RBRACE
    (68) opt_at -> . AT RELATION_STEREOTYPE
    (69) opt_at -> . RELATION_STEREOTYPE
    (70) opt_at -> . empty
    (55) genset_modifiers -> . KW_DISJOINT KW_COMPLETE
    (56) genset_modifiers -> . KW_DISJOINT
    (57) genset_modifiers -> . KW_COMPLETE
    (58) genset_modifiers -> . empty
    (77) empty -> .

    $end            reduce using rule 1 (program -> imports_opt package_decl elementos .)
    CLASS_STEREOTYPE shift and go to state 21
    KW_DATATYPE     shift and go to state 22
    KW_ENUM         shift and go to state 23
    RELATION_STEREOTYPE shift and go to state 27
    KW_IMPORT       shift and go to state 5
    AT              shift and go to state 29
    KW_DISJOINT     shift and go to state 31
    KW_COMPLETE     shift and go to state 32
    KW_RELATION     reduce using rule 77 (empty -> .)
    KW_GENSET       reduce using rule 77 (empty -> .)

    elemento                       shift and go to state 34
    class_decl                     shift and go to state 15
    datatype_decl                  shift and go to state 16
    enum_decl                      shift and go to state 17
    genset_decl                    shift and go to state 18
    relation_decl_external         shift and go to state 19
    import_decl                    shift and go to state 20
    genset_inline                  shift and go to state 24
    genset_block                   shift and go to state 25
    opt_at                         shift and go to state 26
    genset_modifiers               shift and go to state 28
    empty                          shift and go to state 30

state 14

    (8) elementos -> elemento .

    CLASS_STEREOTYPE reduce using rule 8 (elementos -> elemento .)
    KW_DATATYPE     reduce using rule 8 (elementos -> elemento .)
    KW_ENUM         reduce using rule 8 (elementos -> elemento .)
    RELATION_STEREOTYPE reduce using rule 8 (elementos -> elemento .)
    KW_IMPORT       reduce using rule 8 (elementos -> elemento .)
    AT              reduce using rule 8 (elementos -> elemento .)
    KW_DISJOINT     reduce using rule 8 (elementos -> elemento .)
    KW_COMPLETE     reduce using rule 8 (elementos -> elemento .)
    KW_RELATION     reduce using rule 8 (elementos -> elemento .)
    KW_GENSET       reduce using rule 8 (elementos -> elemento .)
    $end            reduce using rule 8 (elementos -> elemento .)


state 15

    (9) elemento -> class_decl .

    CLASS_STEREOTYPE reduce using rule 9 (elemento -> class_decl .)
    KW_DATATYPE     reduce using rule 9 (elemento -> class_decl .)
    KW_ENUM         reduce using rule 9 (elemento -> class_decl .)
    RELATION_STEREOTYPE reduce using rule 9 (elemento -> class_decl .)
    KW_IMPORT       reduce using rule 9 (elemento -> class_decl .)
    AT              reduce using rule 9 (elemento -> class_decl .)
    KW_DISJOINT     reduce using rule 9 (elemento -> class_decl .)
    KW_COMPLETE     reduce using rule 9 (elemento -> class_decl .)
    KW_RELATION     reduce using rule 9 (elemento -> class_decl .)
    KW_GENSET       reduce using rule 9 (elemento -> class_decl .)
    $end            reduce using rule 9 (elemento -> class_decl .)


state 16

    (10) elemento -> datatype_decl .

    CLASS_STEREOTYPE reduce using rule 10 (elemento -> datatype_decl .)
    KW_DATATYPE     reduce using rule 10 (elemento -> datatype_decl .)
    KW_ENUM         reduce using rule 10 (elemento -> datatype_decl .)
    RELATION_STEREOTYPE reduce using rule 10 (elemento -> datatype_decl .)
    KW_IMPORT       reduce using rule 10 (elemento -> datatype_decl .)
    AT              reduce using rule 10 (elemento -> datatype_decl .)
    KW_DISJOINT     reduce using rule 10 (elemento -> datatype_decl .)
    KW_COMPLETE     reduce using rule 10 (elemento -> datatype_decl .)
    KW_RELATION     reduce using rule 10 (elemento -> datatype_decl .)
    KW_GENSET       reduce using rule 10 (elemento -> datatype_decl .)
    $end            reduce using rule 10 (elemento -> datatype_decl .)


state 17

    (11) elemento -> enum_decl .

    CLASS_STEREOTYPE reduce using rule 11 (elemento -> enum_decl .)
    KW_DATATYPE     reduce using rule 11 (elemento -> enum_decl .)
    KW_ENUM         reduce using rule 11 (elemento -> enum_decl .)
    RELATION_STEREOTYPE reduce using rule 11 (elemento -> enum_decl .)
    KW_IMPORT       reduce using rule 11 (elemento -> enum_decl .)
    AT              reduce using rule 11 (elemento -> enum_decl .)
    KW_DISJOINT     reduce using rule 11 (elemento -> enum_decl .)
    KW_COMPLETE     reduce using rule 11 (elemento -> enum_decl .)
    KW_RELATION     reduce using rule 11 (elemento -> enum_decl .)
    KW_GENSET       reduce using rule 11 (elemento -> enum_decl .)
    $end            reduce using rule 11 (elemento -> enum_decl .)


state 18

    (12) elemento -> genset_decl .

    CLASS_STEREOTYPE reduce using rule 12 (elemento -> genset_decl .)
    KW_DATATYPE     reduce using rule 12 (elemento -> genset_decl .)
    KW_ENUM         reduce using rule 12 (elemento -> genset_decl .)
    RELATION_STEREOTYPE reduce using rule 12 (elemento -> genset_decl .)
    KW_IMPORT       reduce using rule 12 (elemento -> genset_decl .)
    AT              reduce using rule 12 (elemento -> genset_decl .)
    KW_DISJOINT     reduce using rule 12 (elemento -> genset_decl .)
    KW_COMPLETE     reduce using rule 12 (elemento -> genset_decl .)
    KW_RELATION     reduce using rule 12 (elemento -> genset_decl .)
    KW_GENSET       reduce using rule 12 (elemento -> genset_decl .)
    $end            reduce using rule 12 (elemento -> genset_decl .)


state 19

    (13) elemento -> relation_decl_external .

    CLASS_STEREOTYPE reduce using rule 13 (elemento -> relation_decl_external .)
    KW_DATATYPE     reduce using rule 13 (elemento -> relation_decl_external .)
    KW_ENUM         reduce using rule 13 (elemento -> relation_decl_external .)
    RELATION_STEREOTYPE reduce using rule 13 (elemento -> relation_decl_external .)
    KW_IMPORT       reduce using rule 13 (elemento -> relation_decl_external .)
    AT              reduce using rule 13 (elemento -> relation_decl_external .)
    KW_DISJOINT     reduce using rule 13 (elemento -> relation_decl_external .)
    KW_COMPLETE     reduce using rule 13 (elemento -> relation_decl_external .)
    KW_RELATION     reduce using rule 13 (elemento -> relation_decl_external .)
    KW_GENSET       reduce using rule 13 (elemento -> relation_decl_external .)
    $end            reduce using rule 13 (elemento -> relation_decl_external .)


state 20

    (14) elemento -> import_decl .

    CLASS_STEREOTYPE reduce using rule 14 (elemento -> import_decl .)
    KW_DATATYPE     reduce using rule 14 (elemento -> import_decl .)
    KW_ENUM         reduce using rule 14 (elemento -> import_decl .)
    RELATION_STEREOTYPE reduce using rule 14 (elemento -> import_decl .)
    KW_IMPORT       reduce using rule 14 (elemento -> import_decl .)
    AT              reduce using rule 14 (elemento -> import_decl .)
    KW_DISJOINT     reduce using rule 14 (elemento -> import_decl .)
    KW_COMPLETE     reduce using rule 14 (elemento -> import_decl .)
    KW_RELATION     reduce using rule 14 (elemento -> import_decl .)
    KW_GENSET       reduce using rule 14 (elemento -> import_decl .)
    $end            reduce using rule 14 (elemento -> import_decl .)


state 21

    (16) class_decl -> CLASS_STEREOTYPE . CLASS_NAME nature_opt inheritance_opt body_opt

    CLASS_NAME      shift and go to state 35


state 22

    (46) datatype_decl -> KW_DATATYPE . datatype_identifier LBRACE atributos_dt RBRACE
    (47) datatype_decl -> KW_DATATYPE . datatype_identifier KW_SPECIALIZES datatype_target_for_spec
    (41) datatype_identifier -> . NEW_TYPE
    (42) datatype_identifier -> . CLASS_NAME

    NEW_TYPE        shift and go to state 37
    CLASS_NAME      shift and go to state 38

    datatype_identifier            shift and go to state 36

state 23

    (50) enum_decl -> KW_ENUM . CLASS_NAME LBRACE lista_enum RBRACE

    CLASS_NAME      shift and go to state 39


state 24

    (53) genset_decl -> genset_inline .

    CLASS_STEREOTYPE reduce using rule 53 (genset_decl -> genset_inline .)
    KW_DATATYPE     reduce using rule 53 (genset_decl -> genset_inline .)
    KW_ENUM         reduce using rule 53 (genset_decl -> genset_inline .)
    RELATION_STEREOTYPE reduce using rule 53 (genset_decl -> genset_inline .)
    KW_IMPORT       reduce using rule 53 (genset_decl -> genset_inline .)
    AT              reduce using rule 53 (genset_decl -> genset_inline .)
    KW_DISJOINT     reduce using rule 53 (genset_decl -> genset_inline .)
    KW_COMPLETE     reduce using rule 53 (genset_decl -> genset_inline .)
    KW_RELATION     reduce using rule 53 (genset_decl -> genset_inline .)
    KW_GENSET       reduce using rule 53 (genset_decl -> genset_inline .)
    $end            reduce using rule 53 (genset_decl -> genset_inline .)


state 25

    (54) genset_decl -> genset_block .

    CLASS_STEREOTYPE reduce using rule 54 (genset_decl -> genset_block .)
    KW_DATATYPE     reduce using rule 54 (genset_decl -> genset_block .)
    KW_ENUM         reduce using rule 54 (genset_decl -> genset_block .)
    RELATION_STEREOTYPE reduce using rule 54 (genset_decl -> genset_block .)
    KW_IMPORT       reduce using rule 54 (genset_decl -> genset_block .)
    AT              reduce using rule 54 (genset_decl -> genset_block .)
    KW_DISJOINT     reduce using rule 54 (genset_decl -> genset_block .)
    KW_COMPLETE     reduce using rule 54 (genset_decl -> genset_block .)
    KW_RELATION     reduce using rule 54 (genset_decl -> genset_block .)
    KW_GENSET       reduce using rule 54 (genset_decl -> genset_block .)
    $end            reduce using rule 54 (genset_decl -> genset_block .)


state 26

    (65) relation_decl_external -> opt_at . KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
    (66) relation_decl_external -> opt_at . KW_RELATION CLASS_NAME cardinality REL_SYM RELATION_NAME REL_SYM cardinality CLASS_NAME

    KW_RELATION     shift and go to state 40


state 27

    (67) relation_decl_external -> RELATION_STEREOTYPE . KW_RELATION CLASS_NAME cardinality REL_SYM cardinality CLASS_NAME
    (69) opt_at -> RELATION_STEREOTYPE .

  ! shift/reduce conflict for KW_RELATION resolved as shift
    KW_RELATION     shift and go to state 41

  ! KW_RELATION     [ reduce using rule 69 (opt_at -> RELATION_STEREOTYPE .) ]


state 28
